<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal|top"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ScrollView
        android:orientation="vertical"
        android:gravity="center_horizontal|top"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal|top"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <ImageView
                android:id="@+id/user_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="#FF404040"
                    android:textSize="20sp"
                    android:text="@string/user_name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="#FF000000"
                    android:textSize="20sp"
                    android:text="@string/nothing"
                    android:id="@+id/user_name"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="#FF404040"
                    android:textSize="20sp"
                    android:text="@string/user_gender"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="#FF000000"
                    android:textSize="20sp"
                    android:text="@string/nothing"
                    android:id="@+id/user_gender"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="#FF404040"
                    android:textSize="20sp"
                    android:text="@string/user_phone"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="#FF000000"
                    android:textSize="20sp"
                    android:text="@string/nothing"
                    android:id="@+id/user_phone"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="#FF404040"
                    android:textSize="20sp"
                    android:text="@string/user_cell"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="#FF000000"
                    android:textSize="20sp"
                    android:text="@string/nothing"
                    android:id="@+id/user_cell"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="#FF404040"
                    android:textSize="20sp"
                    android:text="@string/user_nat"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="#FF000000"
                    android:textSize="20sp"
                    android:text="@string/nothing"
                    android:id="@+id/user_nat"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
